[package]
name = "llmspell-tools"
description = "Tool implementations for rs-llmspell"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
llmspell-core = { path = "../llmspell-core" }
llmspell-utils = { path = "../llmspell-utils" }
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
tracing.workspace = true
jsonschema.workspace = true
reqwest.workspace = true
csv = "1.3"
encoding_rs = "0.8"
chardetng = "0.1"

# Parquet support
arrow = "54.0"
parquet = "54.0"

# Excel support
calamine = "0.26"
xlsxwriter = "0.6"

# Base64 encoding
base64 = "0.22"

# File operations
tempfile = "3.20"

# Security dependencies
llmspell-security = { path = "../llmspell-security" }

# JSON processing with jq
jaq-core = "1.5"
jaq-interpret = "1.5"
jaq-parse = "1.0"
jaq-syn = "1.0"
jaq-std = "2.1"
indexmap = "2.10.0"

# Archive support
zip = "2.2"
tar = "0.4"
flate2 = "1.0"

# Template engines
tera = "1.20"
handlebars = "6.3"

# Validation dependencies
regex = "1.11"
url = "2.5"

# UUID generation
uuid = { version = "1.17", features = ["v1", "v4", "v5", "serde"] }

# Hex encoding/decoding
hex = "0.4"

# Diff calculation
similar = { version = "2.6", features = ["text", "inline", "bytes"] }

# Expression evaluation
fasteval = "0.2"

# File watching
notify = "6.1"

# System monitoring (Unix)
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# System monitoring (Windows)
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["fileapi"] }

[dev-dependencies]
tempfile = "3.20"
futures = "0.3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "tool_initialization"
harness = false

[[bench]]
name = "tool_operations"
harness = false
