[package]
name = "llmspell-tools"
description = "Tool implementations for rs-llmspell"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
llmspell-core = { path = "../llmspell-core" }
llmspell-utils = { path = "../llmspell-utils" }
llmspell-hooks = { path = "../llmspell-hooks" }
llmspell-kernel = { path = "../llmspell-kernel" }
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
tracing.workspace = true
jsonschema.workspace = true
reqwest.workspace = true
csv = "1.3"
encoding_rs = "0.8"
chardetng = "0.1"
urlencoding = "2.1"

# Parquet support (optional)
arrow = { version = "54.0", optional = true }
parquet = { version = "54.0", optional = true }

# Excel support (optional)
calamine = { version = "0.26", optional = true }
xlsxwriter = { version = "0.6", optional = true }

# Base64 encoding
base64 = "0.22"

# File operations
tempfile = "3.20"

# Security dependencies
llmspell-security = { path = "../llmspell-security" }

# Random number generation for jitter
rand = { workspace = true }

# JSON processing with jq (optional)
jaq-core = { version = "1.5", optional = true }
jaq-interpret = { version = "1.5", optional = true }
jaq-parse = { version = "1.0", optional = true }
jaq-syn = { version = "1.0", optional = true }
jaq-std = { version = "1.5", optional = true }
indexmap = { version = "2.10.0", optional = true }

# Archive support (optional)
zip = { version = "2.2", optional = true }
tar = { version = "0.4", optional = true }
flate2 = { version = "1.0", optional = true }

# Template engines (optional)
tera = { version = "1.20", optional = true }
handlebars = { version = "6.3", optional = true }

# Validation dependencies
regex = "1.11"
url = "2.5"

# Web scraping
scraper = "0.22"

# UUID generation
uuid = { workspace = true }

# Hex encoding/decoding
hex = "0.4"

# Diff calculation
similar = { version = "2.6", features = ["text", "inline", "bytes"] }

# Expression evaluation
fasteval = "0.2"

# File watching
notify = "6.1"

# Lazy static initialization
once_cell = "1.20"

# Parking lot for RwLock
parking_lot.workspace = true

# Email support (optional)
lettre = { version = "0.11", optional = true, default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "hostname", "builder"] }
aws-sdk-ses = { version = "1.61", optional = true }
aws-config = { version = "1.5", optional = true }

# Database support (optional)
sqlx = { version = "0.8", optional = true, features = ["runtime-tokio-rustls", "postgres", "mysql", "sqlite", "chrono", "uuid"] }

# Phase 7 Tools Dependencies
# PDF processing (optional)
pdf-extract = { version = "0.9", optional = true }

# Citation formatting (comprehensive CSL support)
hayagriva = "0.5"

# Graph data structures with JSON serialization
petgraph = { version = "0.6", features = ["serde-1"] }

# System monitoring (Unix)
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# System monitoring (Windows)
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["fileapi"] }

[features]
default = []  # Truly minimal - no heavy external dependencies
common = ["templates", "pdf"]  # Convenient preset for typical usage
full = ["csv-parquet", "templates", "pdf", "excel", "json-query", "archives", "email", "email-aws", "database"]

# Individual feature flags
csv-parquet = ["dep:arrow", "dep:parquet"]
templates = ["dep:tera", "dep:handlebars"]
pdf = ["dep:pdf-extract"]
excel = ["dep:calamine", "dep:xlsxwriter"]
json-query = ["dep:jaq-core", "dep:jaq-interpret", "dep:jaq-parse", "dep:jaq-syn", "dep:jaq-std", "dep:indexmap"]
archives = ["dep:zip", "dep:tar", "dep:flate2"]

# Email support
email = ["dep:lettre"]
email-aws = ["dep:aws-sdk-ses", "dep:aws-config"]

# Database support
database = ["dep:sqlx"]
database-postgres = ["database", "sqlx/postgres"]
database-mysql = ["database", "sqlx/mysql"]
database-sqlite = ["database", "sqlx/sqlite"]

[dev-dependencies]
tempfile = "3.20"
futures = "0.3"
criterion = { version = "0.5", features = ["html_reports"] }
llmspell-bridge = { path = "../llmspell-bridge", features = ["lua"] }
llmspell-testing = { path = "../llmspell-testing" }
tracing-subscriber.workspace = true

[[bench]]
name = "tool_initialization"
harness = false

[[bench]]
name = "tool_operations"
harness = false

[[bench]]
name = "hook_performance"
harness = false
