[package]
name = "llmspell-utils"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }

# UUID and time handling
uuid = { workspace = true }
chrono = { workspace = true }
chrono-tz = "0.10"

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging and tracing
tracing = { workspace = true }

# Cross-platform filesystem operations
path-clean = { workspace = true }
walkdir = { workspace = true }

# Concurrency primitives
crossbeam = { workspace = true }
parking_lot = { workspace = true }

# Environment and process management
which = { workspace = true }

# Random number generation
rand = { workspace = true }

# Hashing algorithms
sha2 = "0.10"
sha1 = "0.10"
md5 = "0.7"
base64 = "0.22"
hex = "0.4"

# Pattern matching
glob = "0.3"
regex = "1.10"

# JSON schema validation
jsonschema = { workspace = true }

# Text encoding detection and conversion
encoding_rs = "0.8"
chardetng = "0.1"

# Testing utilities (used in search tests)
tempfile = "3.13"

# URL parsing
url = "2.5"

# Once cell for lazy statics
once_cell = "1.20"

# Core types
llmspell-core = { path = "../llmspell-core" }

# Platform-specific dependencies
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "file_utils_benchmarks"
harness = false