[package]
name = "llmspell-web"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
rust-embed = "8.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
anyhow = "1.0"
serde_json = "1.0"
