[package]
name = "llmspell-web"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
rust-embed = "8.0"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
anyhow = "1.0"
serde_json = "1.0"
llmspell-kernel = { path = "../llmspell-kernel" }
llmspell-core = { path = "../llmspell-core" }
llmspell-events = { path = "../llmspell-events" }
futures = "0.3"
tracing = "0.1"
llmspell-memory = { path = "../llmspell-memory" }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

[dev-dependencies]
http-body-util = "0.1"
