[package]
name = "llmspell-workflows"
description = "Workflow implementations for rs-llmspell"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
llmspell-core = { path = "../llmspell-core" }
llmspell-hooks = { path = "../llmspell-hooks" }
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"

[dev-dependencies]
tracing-subscriber = "0.3"
criterion = { version = "0.5", features = ["async_tokio"] }

[[test]]
name = "workflow_hooks"
path = "tests/workflow_hooks.rs"

[[bench]]
name = "workflow_hook_overhead"
harness = false