[package]
name = "llmspell-workflows"
description = "Workflow implementations for rs-llmspell"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
llmspell-core = { path = "../llmspell-core" }
llmspell-kernel = { path = "../llmspell-kernel" }
llmspell-hooks = { path = "../llmspell-hooks" }
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
uuid = { workspace = true }

[dev-dependencies]
llmspell-testing = { path = "../llmspell-testing" }
tracing-subscriber = "0.3"
criterion = { version = "0.5", features = ["async_tokio"] }


[[bench]]
name = "workflow_hook_overhead"
harness = false