[package]
name = "vectorlite-rs"
description = "Pure Rust HNSW vector search extension for SQLite"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
# Build both:
# - cdylib: Loadable SQLite extension (.so/.dylib/.dll)
# - rlib: Rust library for integration tests
crate-type = ["cdylib", "rlib"]

[dependencies]
# HNSW vector indexing
hnsw_rs = "0.3.2"

# SQLite virtual table API
# bundled feature: Embed SQLite for cdylib (avoids runtime libsqlite3 dependency)
# vtab feature: Virtual table trait implementations
rusqlite = { version = "0.32", features = ["vtab"] }

# Serialization for metadata and configuration
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
# MessagePack for HNSW index persistence
rmp-serde = "1.1"

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Zero-copy Vec<f32> marshaling for SQLite BLOBs
zerocopy = { workspace = true }

# Logging
tracing = { workspace = true }

[features]
default = []
bundled = ["rusqlite/bundled"]

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }
